<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/title_text"/>

    <Button
        android:text="@string/spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:id="@+id/button1"
        android:background="#3FC380"
        android:padding="12dp"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/title_text"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />

    <Button
        android:text="@string/scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:id="@+id/button2"
        android:background="#3FC380"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button1"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />

    <Button
        android:text="@string/library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:id="@+id/button3"
        android:layout_marginTop="15dp"
        android:background="#3FC380"
        android:layout_below="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />

    <Button
        android:text="@string/build_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:id="@+id/button4"
        android:background="#3FC380"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:text="@string/xyz_reader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:id="@+id/button5"
        android:background="#3FC380"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <Button
        android:text="@string/capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        android:id="@+id/button6"
        android:background="#C8F7C5"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
